Scrollbar Issue

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,26 @@ p{
     color: #ccc;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 1vw;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
 .grid-container{
     display: grid;
     grid-template-columns: 25vw 17vw 16vw 17vw 25vw;
@@ -16,6 +36,10 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#instructions{
+    padding-right: 1vw;
 }
 
 .center{
